--- a/alarm/alarm.html
+++ b/alarm/alarm.html
@@ -14,10 +14,10 @@
 </head>
 
 <body>
-    <div class="relative content bg-white border-white">
-        <div class="bg-white border-gray-200">
+    <div class="relative content bg-white border-white ">
+        <div class="bg-white border-gray-200 ">
             <nav>
-                <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 h-15 shadow">
+                <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 h-15 shadow-md">
                     <a href="/main.html" class="flex items-center">
                         <img src="../img/logo.png" class="w-24 h-9 mr-3" />
                     </a>
