--- a/alarm/select_other.html
+++ b/alarm/select_other.html
@@ -10,7 +10,8 @@
 
 
     <title>삐용</title>
-    <link rel="stylesheet" href="../css/select.css" />
+    <link rel="stylesheet" href="/css/config.css" />
+    <link rel="stylesheet" href="/css/select.css" />
     <style>
         @keyframes fadeInDown {
             0% {
