fix: 인증번호 수정

--- a/account/signup.html
+++ b/account/signup.html
@@ -40,7 +40,7 @@
         <!-- 인증번호 입력 input-box -->
         <div id="verificationInput" class="input-box mt-5 relative" style="display: none">
           <label for="verificationCode" class="block text-black-700 font-bold mb-2">인증번호</label>
-          <input type="number" id="verificationCode" name="verificationCode" class="form-input w-80 h-11 px-3 py-2 rounded-md border border-gray-400 focus:outline-none focus:ring focus:border-blue-600" required />
+          <input type="text" id="verificationCode" name="verificationCode" class="form-input w-80 h-11 px-3 py-2 rounded-md border border-gray-400 focus:outline-none focus:ring focus:border-blue-600" required />
           <button id="verifyButton" type="button" class="absolute right-2 translate-y-1/4 w-11 h-7 bg-gray-600 rounded-md text-white font-bold text-sm">확인</button>
         </div>
         
