--- a/map.html
+++ b/map.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="kp">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8" />
@@ -91,7 +91,7 @@
                             <div id="name" class="ml-5 text-2xl font-bold mb-2"></div>
                             <div id="value"><button id="category_btn" class="h-8 bg-black ">제발 나와줘 ㅜㅜ</button></div>
                             <div id="address">
-                                <div class="flex ml-5">
+                                <div class="flex ml-5 mb-5">
                                     <div id="textArea" class="mt-1"></div>
                                     <button id="btn" data-clipboard-target="#textArea" class="ml-2 p-1 rounded bg-gray-600 text-white text-sm pl-2 pr-2 pt-1 pb-1">복사</button>
                                 </div>
