--- a/account/signup.html
+++ b/account/signup.html
@@ -32,9 +32,11 @@
         </div>
         
         <!-- 인증번호 발송 문구 -->
-        <div id="verificationMessage" class="text-sm text-black mt-1" style="display: none">
-          <img src="../img/svg/check_icon.svg" alt="인증번호" class="w-4 h-4 flex items-center mr-2" />
-          <span>인증번호가 발송되었습니다.</span>
+        <div id="verificationMessage" class="flex items-start justify-start text-sm text-black mt-1" style="display: none">
+          <div class="flex items-center">
+            <img src="../img/svg/check_icon.svg" alt="인증번호" class="w-4 h-4 mr-2" />
+            <span>인증번호가 발송되었습니다.</span>
+          </div>
         </div>
       
         <!-- 인증번호 입력 input-box -->
