알람 오류 수정

--- a/alarm/alarm.html
+++ b/alarm/alarm.html
@@ -12,6 +12,12 @@
     <title>삐용</title>
 
     <link rel="stylesheet" href="/css/config.css" />
+    <style>
+        #alarm_message{
+            display: flex;
+            flex-direction: column-reverse;
+        }
+    </style>
 </head>
 
 <body>
@@ -55,7 +61,7 @@
             </div>
 
             <!--main-->
-            <div id="alarm_message" class="flex-wrap mb-4">
+            <div id="alarm_message">
                 <!-- <div class="pb-2 border-b-2 mt-4"> 
                     <div class="flex space-x-40 ml-3 space-x-16">
                         <div class="font-bold text-xl mb-1 mr-4">경기도청 알림</div>
