Feat : 로그인 체크 로직

--- a/main.html
+++ b/main.html
@@ -11,8 +11,9 @@
       defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB12bgQnvBrc0Hwuztjrqpxvv7vEHvcf0U"
     ></script>
-
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="./js/isLogined.js"></script>
+
     <title>삐용</title>
     <link rel="stylesheet" href="../css/config.css" />
     <style>
