--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB12bgQnvBrc0Hwuztjrqpxvv7vEHvcf0U"
     ></script>
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="./js/isLogined.js"></script>
+    <script src="./js/isLoggedin.js"></script>
 
     <title>삐용</title>
     <link rel="stylesheet" href="../css/config.css" />
@@ -46,7 +46,7 @@
           >
             <!-- 로고 이미지 삽입 -->
             <div class="flex items-center justify-center">
-              <a href="#" class="flex items-center">
+              <a href="main.html" class="flex items-center">
                 <img src="../img/logo.png" class="w-24 h-9 mr-10" />
               </a>
             </div>
