--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>PPIYONG</title>
 </head>
 <body>
-    <h1>안녕하세용 이거슨 테스트입니다~~~~!</h1>
+    <h1>메인 브랜치로 이사했습니다. 그동안 사랑해 주셔서 감사합니</h1>
 </body>
 </html>
