--- a/mainDetail.html
+++ b/mainDetail.html
@@ -209,7 +209,7 @@
 
       <div class="ml-2 flex items-center justify-start text-start">
         <div class="font-medium text-lg mt-3 ml-4 mr-1">댓글</div>
-        <div class="font-bold text-lg mt-3 mr-5">2</div>
+        <div id="comment_number" class="font-bold text-lg mt-3 mr-5">0</div>
       </div>
 
       <!--댓글 입력폼-->
