--- a/myChecklist.html
+++ b/myChecklist.html
@@ -213,7 +213,7 @@
         <div class="title flex justify-between">
           <div>
             <p class="text-2xl">
-              <span class="font-bold">김동현</span>님만의 <br />
+              <span class="username-text font-bold">김동현</span>님만의 <br />
               재난대비 체크리스트
             </p>
           </div>
