--- a/alarm/select_other.html
+++ b/alarm/select_other.html
@@ -38,23 +38,177 @@
     <!--header-->
     <div class="relative content bg-white border-white">
         <div>
-            <nav>
-                <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 h-15 shadow-md">
-                    <a href="main.html" class="flex items-center">
-                        <img src="../img/logo.png" class="w-24 h-9 mr-3" />
-                    </a>
-                    <div class="flex justify-end items-center">
-                        <div class="w-20 h-8 text-center p-1">
+            <div class="bg-white border-gray-200 shadow">
+                <nav class="bg-white border-gray-200">
+                  <div
+                    class="max-w-screen-xl flex flex-nowrap items-center justify-between mx-auto p-4 h-15"
+                  >
+                    <!-- 로고 이미지 삽입 -->
+                    <div class="flex items-center justify-center">
+                      <a href="main.html" class="flex items-center">
+                        <img src="../img/logo.png" class="w-24 h-9 mr-10" />
+                      </a>
+                    </div>
+                    <div class="main-nav-items">
+                      <div
+                        id="login-nav"
+                        class="flex items-center justify-end text-end"
+                      >
+                        <a href="alarm/alarm.html"
+                          ><img src="../img/icon/알림.png" class="w-6 h-6 mt-3 mr-3"
+                        /></a>
+                        <div class="username-text font-medium text-lg mt-1 mr-6">
+                          강윤진님
+                        </div>
+                        <div class="text-center">
+                          <button
+                            type="button"
+                            data-drawer-target="drawer-navigation"
+                            data-drawer-show="drawer-navigation"
+                            aria-controls="drawer-navigation"
+                          >
+                            <img
+                              src="../img/icon/햄버거바.png"
+                              alt="menu"
+                              class="w-6 h-5 mt-3"
+                            />
+                          </button>
+                        </div>
+                      </div>
+        
+                      <div id="non-login-nav" class="flex justify-end">
+                        <div class="w-20 h-8 text-center p-1 ml-14">
+                          <a href="account/login.html">
                             <button>로그인</button>
+                          </a>
                         </div>
                         <div class="bg-yellow-300 w-20 h-8 rounded text-center p-1">
+                          <a href="account/signup.html">
                             <button>회원가입</button>
+                          </a>
                         </div>
+                      </div>
                     </div>
+                  </div>
+                </nav>
+              </div>
+              <!-- drawer component -->
+              <div
+                id="drawer-navigation"
+                class="fixed top-0 left-0 z-40 w-64 h-screen p-4 overflow-y-auto transition-transform -translate-x-full bg-white dark:bg-gray-800"
+                tabindex="-1"
+                aria-labelledby="drawer-navigation-label"
+              >
+                <button
+                  type="button"
+                  data-drawer-hide="drawer-navigation"
+                  aria-controls="drawer-navigation"
+                  class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 absolute top-2.5 right-2.5 inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white"
+                >
+                  <svg
+                    aria-hidden="true"
+                    class="w-5 h-5"
+                    fill="currentColor"
+                    viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                      clip-rule="evenodd"
+                    ></path>
+                  </svg>
+                  <span class="sr-only">Close menu</span>
+                </button>
+                <div class="py-4 overflow-y-auto">
+                  <ul class="space-y-2">
+                    <li>
+                      <a
+                        class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white"
+                      >
+                        <svg
+                          class="w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                          aria-hidden="true"
+                          xmlns="http://www.w3.org/2000/svg"
+                          fill="currentColor"
+                          viewBox="0 0 22 21"
+                        ></svg>
+                        <span class="username-text mt-10 font-bold text-2xl"
+                          >강윤진</span
+                        >
+                        <span class="mt-10 font-medium text-2xl">님</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        href="myChecklist.html"
+                        class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
+                      >
+                        <svg
+                          class="flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                          aria-hidden="true"
+                          xmlns="http://www.w3.org/2000/svg"
+                          fill="currentColor"
+                          viewBox="0 0 18 18"
+                        ></svg>
+                        <span class="flex-1 ml-3 whitespace-nowrap">MY 체크리스트</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        href="/account/select_region.html"
+                        class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
+                      >
+                        <svg
+                          class="flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                          aria-hidden="true"
+                          xmlns="http://www.w3.org/2000/svg"
+                          fill="currentColor"
+                          viewBox="0 0 20 20"
+                        ></svg>
+                        <span class="flex-1 ml-3 whitespace-nowrap"
+                          >다른 지역 확인하기</span
+                        >
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        href="account/editMember.html"
+                        class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
+                      >
+                        <svg
+                          class="flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                          aria-hidden="true"
+                          xmlns="http://www.w3.org/2000/svg"
+                          fill="currentColor"
+                          viewBox="0 0 20 18"
+                        ></svg>
+                        <span class="flex-1 ml-3 whitespace-nowrap"
+                          >회원정보 수정하기</span
+                        >
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        href="#"
+                        class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
+                      >
+                        <svg
+                          class="flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                          aria-hidden="true"
+                          xmlns="http://www.w3.org/2000/svg"
+                          fill="currentColor"
+                          viewBox="0 0 18 20"
+                        ></svg>
+                        <span class="flex-1 ml-3 whitespace-nowrap">로그아웃</span>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
-            </nav>
-            <!--main-->
+              </div>
             <!--다른 지역 확인하기-->
+            <!--main-->
+            
             <section id="select_other">
                 <nav>
                     <div class="ml-4 mb-6 mt-5 h-25">
@@ -112,9 +266,40 @@
 
 
     </div>
-
+    <script>
+        $(document).ready(function () {
+          const is_logged_in = true; //초기값, 이거 검사 어케하노 로그인되면 로컬에 로그인유무 저장
+  
+          if (is_logged_in) {
+            getUserInform();
+            $("#login-nav").show();
+            $("#non-login-nav").hide();
+          } else {
+            $("#non-login-nav").show();
+            $("#login-nav").hide();
+          }
+        });
+  
+        //로그인한 상태면 유저정보 받아오기
+        function getUserInform() {
+          $.ajax({
+            url: "https://ppiyong.shop/api/user",
+            type: "GET",
+            dataType: "json",
+            success: function (data) {
+              username = data.nickName;
+              $(".username-text").text(username);
+            },
+            error: function (jqXHR, textStatus, errorThrown) {
+              //alert("통신 실패");
+              console.error(textStatus, errorThrown);
+            },
+          });
+        }
+      </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="../js/select_other.js"></script>
+    <script src="../js/isLoggedin.js"></script>
 </body>
 
 </html>
