페이지 연결

--- a/alarm/select_other.html
+++ b/alarm/select_other.html
@@ -216,7 +216,7 @@
                         <div class="flex-col justify-start mb-4">
                             <div class="flex items-center h-6">
                                     <div>
-                                        <a href="#">
+                                        <a href="/main.html">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                             viewBox="0 0 24 24" fill="none">
                                             <path d="M10 19L3 12M3 12L10 5M3 12H21" stroke="#3F3F46" stroke-width="2.5"
