--- a/alarm/alarm.html
+++ b/alarm/alarm.html
@@ -193,7 +193,7 @@
             <!--알림-->
             <div class="border-b-2 h-28">
                 <div class="ml-3 flex-col justify-start h-12">
-                    <div class="flex items-center mt-4 mb-2"><a href="#">
+                    <div class="flex items-center mt-4 mb-2"><a href="/main.html">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none">
                                 <path d="M10 19L3 12M3 12L10 5M3 12H21" stroke="#3F3F46" stroke-width="2.5"
