Fix : 체크리스트 추가 로직 수정

--- a/checklist.html
+++ b/checklist.html
@@ -75,19 +75,19 @@
             id="searchNav-item"
             class="max-w-screen-xl flex flex-wrap items-center justify-around mx-auto p-3 pb-0"
           >
-            <button id="home-href" class="font-bold">
+            <button id="home-href">
               <a href="main.html">홈</a>
-              <div
-                class="under-nav bg-mySky p-1 h-3 border-b-4 border-yellow-300 border-7"
-              ></div>
+              <div class="bg-mySky p-1 h-3"></div>
             </button>
             <button id="shelter-href">
               <a href="map.html">주변 대피소</a>
               <div class="bg-mySky p-1 h-3"></div>
             </button>
-            <button id="checklist-href">
+            <button id="checklist-href" class="font-bold">
               <a href="checklist.html">체크리스트</a>
-              <div class="bg-mySky p-1 h-3"></div>
+              <div
+                class="under-nav bg-mySky p-1 h-3 border-b-4 border-yellow-300 border-7"
+              ></div>
             </button>
           </div>
 
