--- a/account/signup.html
+++ b/account/signup.html
@@ -17,7 +17,7 @@
     <div class="flex flex-col items-start">
       <!-- 회원가입 -->
       <div
-        id="heading"
+        id="signup-title"
         class="flex items-start justify-start text-left text-black font-bold text-2xl"
       >
         회원가입
