--- a/account/signup.html
+++ b/account/signup.html
@@ -99,12 +99,12 @@
 
       <!-- 지역 선택 dropdown -->
       <div id="locationDropdown" class="input-box mt-4" style="display: none">
-        <label for="location" class="block text-black-700 font-bold mb-2"
+        <label for="region" class="block text-black-700 font-bold mb-2"
           >지역 선택</label
         >
         <select
-          id="location"
-          name="location"
+          id="region"
+          name="region"
           class="form-select w-80 h-11 px-3 py-2 rounded-md border border-gray-400 focus:outline-none focus:ring focus:border-blue-600 mb-20"
           required
         >
