--- a/account/signup.html
+++ b/account/signup.html
@@ -136,6 +136,12 @@
       >
         다음
       </button>
+      <button
+        id="member"
+        class="bg-yellow-300 text-black font-bold py-2 px-4 rounded-md mt-20 w-80 h-11" style ="display: none"
+      >
+        회원가입 완료
+      </button>
     </div>
 
     <script>
