--- a/alarm/alarm.html
+++ b/alarm/alarm.html
@@ -174,7 +174,7 @@
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="#" id="logout_btn"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
                   >
                     <svg
@@ -220,9 +220,72 @@
         </div>
 
     </div>
+    <script>
+    $(document).ready(function () {
+      var isLoggedin = checkJSessionID();
+      console.log(isLoggedin); // true 또는 false
+
+      if (isLoggedin) {
+      getUserInform();
+      $("#login-nav").show();
+      $("#non-login-nav").hide();
+      } else {
+      $("#non-login-nav").show();
+      $("#login-nav").hide();
+    }
+
+    //logout 
+
+      $(document).on("click", "#logout-button", function() {
+        logout();
+      });
+
+
+      function getUserInform() {
+        $.ajax({
+        url: "https://ppiyong.shop/api/user",
+        type: "GET",
+        xhrFields: {
+          withCredentials: true, // 클라이언트와 서버가 통신할때 쿠키 값을 공유하겠다는 설정
+        },
+        success: function (data) {
+        username = data.nickName;
+        $(".username-text").text(username);
+        },
+        error: function (jqXHR, textStatus, errorThrown) {
+          alert("통신 실패");
+          console.error(textStatus, errorThrown);
+          $(".username-text").text("undefined");
+        },
+      });
+    }
+});
+
+  function checkJSessionID() {
+   var cookies = document.cookie.split(";");
+   var jsessionExists = false;
+
+   for (var i = 0; i < cookies.length; i++) {
+     var cookie = cookies[i].trim();
+     if (cookie.indexOf("JSESSIONID=") === 0) {
+        jsessionExists = true;
+        break;
+    }
+  }
+
+   return jsessionExists;
+  }
+
+  function logout() {
+  document.cookie = "JSESSIONID=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
+  window.location.href = "/main.html"; // 로그인 페이지로 리다이렉션
+  }
+
+
+    </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="../js/alarm.js"></script>
-    <script src="../js/isLoggedin.js"></script>
+    <!-- <script src="../js/isLoggedin.js"></script> -->
 </body>
 
 </html>
