--- a/account/login.html
+++ b/account/login.html
@@ -32,7 +32,7 @@
                 <input type="checkbox" id="rememberId" class="mt-4 h-4 w-4 rounded border-gray-400 accent-yellow-300 mr-2">
                 <label for="rememberId" class="mt-3.5 text-black font-medium text-sm mr-16">로그인 유지하기</label>
      
-            <button type="submit" class="ml-10 text-black font-medium text-sm mt-3.5"><a href="findPassword.html">비밀번호 찾기</a></button>
+            <button type="submit" class="ml-10 text-black font-medium text-sm mt-3.5"><a href="../account/findPassword.html">비밀번호 찾기</a></button>
         </div>
          <!-- 아직 삐용 회원이 아니신가요? -->
          <div class="text-black font-medium text-sm mt-20">
