로그아웃 수정

--- a/alarm/alarm.html
+++ b/alarm/alarm.html
@@ -174,7 +174,7 @@
                 </li>
                 <li>
                   <a
-                    href="#" id="logout_btn"
+                    href="#"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
                   >
                     <svg
@@ -184,7 +184,7 @@
                       fill="currentColor"
                       viewBox="0 0 18 20"
                     ></svg>
-                    <span class="flex-1 ml-3 whitespace-nowrap">로그아웃</span>
+                    <div class="flex-1 ml-3 whitespace-nowrap" id="logout_btn">로그아웃</div>
                   </a>
                 </li>
               </ul>
