--- a/checklist.html
+++ b/checklist.html
@@ -225,7 +225,7 @@
         <p class="text-base text-center p-2 m-3">
           <span id="current_city"></span>에서 <br />
           가장 최근에 온 재난 메세지는 <br />
-          <span id="recent-disaster" class="font-bold">호우 관련 </span>입니다.
+          <span id="recent-disaster" class="font-bold"></span>관련 입니다.
         </p>
       </div>
 
