--- a/map.html
+++ b/map.html
@@ -210,7 +210,7 @@
                       fill="currentColor"
                       viewBox="0 0 18 20"
                     ></svg>
-                    <span class="flex-1 ml-3 whitespace-nowrap">로그아웃</span>
+                    <span id="#logout_btn" class="flex-1 ml-3 whitespace-nowrap">로그아웃</span>
                   </a>
                 </li>
               </ul>
@@ -263,7 +263,8 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="../js/map.js"></script>
-    <script src="../js/isLoggedin.js"></script>
+    <!-- <script src="../js/isLoggedin.js"></script> -->
+    <script src="../js/logoutTest.js"></script>
 </body>
 
 </html>
