fix : 체크리스트 링크 수정  (강윤진)

--- a/base.html
+++ b/base.html
@@ -21,7 +21,10 @@
           >
             <!-- 로고 이미지 삽입 -->
             <div class="flex items-center justify-center">
-              <a href="https://page.ppiyong.shop/main.html" class="flex items-center">
+              <a
+                href="https://page.ppiyong.shop/main.html"
+                class="flex items-center"
+              >
                 <img src="../img/logo.png" class="w-24 h-9 mr-10" />
               </a>
             </div>
@@ -72,19 +75,19 @@
             id="searchNav-item"
             class="max-w-screen-xl flex flex-wrap items-center justify-around mx-auto p-3 pb-0"
           >
-            <button id="home-href" class="font-bold">
+            <button id="home-href">
               <a href="https://page.ppiyong.shop/main.html">홈</a>
-              <div
-                class="under-nav bg-mySky p-1 h-3 border-b-4 border-yellow-300 border-7"
-              ></div>
+              <div class="bg-mySky p-1 h-3"></div>
             </button>
             <button id="shelter-href">
               <a href="https://page.ppiyong.shop/map.html">주변 대피소</a>
               <div class="bg-mySky p-1 h-3"></div>
             </button>
-            <button id="checklist-href">
+            <button id="checklist-href " class="font-bold">
               <a href="https://page.ppiyong.shop/checklist.html">체크리스트</a>
-              <div class="bg-mySky p-1 h-3"></div>
+              <div
+                class="under-nav bg-mySky p-1 h-3 border-b-4 border-yellow-300 border-7"
+              ></div>
             </button>
           </div>
 
