--- a/myChecklist.html
+++ b/myChecklist.html
@@ -24,7 +24,10 @@
           >
             <!-- 로고 이미지 삽입 -->
             <div class="flex items-center justify-center">
-              <a href="/main.html" class="flex items-center">
+              <a
+                href="https://page.ppiyong.shop/main.html"
+                class="flex items-center"
+              >
                 <img src="../img/logo.png" class="w-24 h-9 mr-10" />
               </a>
             </div>
@@ -33,7 +36,7 @@
                 id="login-nav"
                 class="flex items-center justify-end text-end"
               >
-                <a href="alarm/alarm.html"
+                <a href="https://page.ppiyong.shop/alarm/alarm.html"
                   ><img src="../img/icon/알림.png" class="w-6 h-6 mt-3 mr-3"
                 /></a>
                 <div class="username-text font-medium text-lg mt-1 mr-6">
@@ -57,12 +60,12 @@
 
               <div id="non-login-nav" class="flex justify-end">
                 <div class="w-20 h-8 text-center p-1 ml-14">
-                  <a href="account/login.html">
+                  <a href="https://page.ppiyong.shop/account/login.html">
                     <button>로그인</button>
                   </a>
                 </div>
                 <div class="bg-yellow-300 w-20 h-8 rounded text-center p-1">
-                  <a href="account/signup.html">
+                  <a href="https://page.ppiyong.shop/account/signup.html">
                     <button>회원가입</button>
                   </a>
                 </div>
@@ -75,19 +78,19 @@
             id="searchNav-item"
             class="max-w-screen-xl flex flex-wrap items-center justify-around mx-auto p-3 pb-0"
           >
-            <button id="home-href" class="font-bold">
-              <a href="main.html">홈</a>
+            <button id="home-href">
+              <a href="https://page.ppiyong.shop/main.html">홈</a>
+              <div class="bg-mySky p-1 h-3"></div>
+            </button>
+            <button id="shelter-href">
+              <a href="https://page.ppiyong.shop/map.html">주변 대피소</a>
+              <div class="bg-mySky p-1 h-3"></div>
+            </button>
+            <button id="checklist-href " class="font-bold">
+              <a href="https://page.ppiyong.shop/checklist.html">체크리스트</a>
               <div
                 class="under-nav bg-mySky p-1 h-3 border-b-4 border-yellow-300 border-7"
               ></div>
-            </button>
-            <button id="shelter-href">
-              <a href="map.html">주변 대피소</a>
-              <div class="bg-mySky p-1 h-3"></div>
-            </button>
-            <button id="checklist-href">
-              <a href="checklist.html">체크리스트</a>
-              <div class="bg-mySky p-1 h-3"></div>
             </button>
           </div>
 
@@ -143,7 +146,7 @@
             </li>
             <li>
               <a
-                href="myChecklist.html"
+                href="https://page.ppiyong.shop/myChecklist.html"
                 class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
               >
                 <svg
@@ -158,7 +161,7 @@
             </li>
             <li>
               <a
-                href="/account/select_region.html"
+                href="https://page.ppiyong.shop/alarm/select_region.html"
                 class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
               >
                 <svg
@@ -175,7 +178,7 @@
             </li>
             <li>
               <a
-                href="account/editMember.html"
+                href="https://page.ppiyong.shop/account/editMember.html"
                 class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
               >
                 <svg
@@ -207,7 +210,7 @@
             </li>
           </ul>
         </div>
-      </div>
+      </div> 
 
       <div class="cehcklist-content p-5">
         <div class="title flex justify-between">
