--- a/checklist/snow.html
+++ b/checklist/snow.html
@@ -9,6 +9,7 @@
 
     <title>main</title>
     <link rel="stylesheet" href="../css/config.css" />
+    <script src="./js/isLoggedin.js"></script>
   </head>
 
   <body>
@@ -18,7 +19,7 @@
           <div
             class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 h-15"
           >
-            <a href="#" class="flex items-center">
+            <a href="https://page.ppiyong.shop/main.html" flex items-center">
               <img src="../img/logo.png" class="w-24 h-9 mr-3" />
             </a>
             <div class="flex justify-end items-center">
@@ -37,15 +38,15 @@
             class="max-w-screen-xl flex flex-wrap items-center justify-around mx-auto p-3 pb-0"
           >
             <div>
-              <a href="#">홈</a>
+              <a href="https://page.ppiyong.shop/main.html">홈</a>
               <div class="bg-mySky p-1 h-3"></div>
             </div>
             <div>
-              <a href="#">주변 대피소</a>
+              <a href="https://page.ppiyong.shop/map.html">주변 대피소</a>
               <div class="bg-mySky p-1 h-3"></div>
             </div>
             <div>
-              <a href="#">체크리스트</a>
+              <a href="https://page.ppiyong.shop/checklist.html">체크리스트</a>
               <div class="bg-mySky p-1 h-3"></div>
             </div>
           </div>
@@ -56,7 +57,7 @@
         <div class="content-title flex justify-between">
           <div>
             <p class="text-2xl">
-              <span class="font-bold">대설</span> <br />
+              <span class="font-bold">태풍/강풍</span> <br />
               체크리스트
             </p>
           </div>
