--- a/checklist/heat.html
+++ b/checklist/heat.html
@@ -15,70 +15,225 @@
   <body>
     <div class="relative content bg-gray-50 border-white">
       <div class="bg-white border-gray-200 shadow">
-        <nav>
+        <nav class="bg-white border-gray-200">
           <div
-            class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 h-15"
+            class="max-w-screen-xl flex flex-nowrap items-center justify-between mx-auto p-4 h-15"
           >
-            <a href="https://page.ppiyong.shop/main.html" flex items-center">
-              <img src="../img/logo.png" class="w-24 h-9 mr-3" />
-            </a>
-            <div class="flex justify-end items-center">
-              <div class="w-20 h-8 text-center p-1">
-                <button>로그인</button>
+            <!-- 로고 이미지 삽입 -->
+            <div class="flex items-center justify-center">
+              <a href="main.html" class="flex items-center">
+                <img src="../img/logo.png" class="w-24 h-9 mr-10" />
+              </a>
+            </div>
+            <div class="main-nav-items">
+              <div
+                id="login-nav"
+                class="flex items-center justify-end text-end"
+              >
+                <a href="alarm/alarm.html"
+                  ><img src="../img/icon/알림.png" class="w-6 h-6 mt-3 mr-3"
+                /></a>
+                <div class="username-text font-medium text-lg mt-1 mr-6">
+                  강윤진님
+                </div>
+                <div class="text-center">
+                  <button
+                    type="button"
+                    data-drawer-target="drawer-navigation"
+                    data-drawer-show="drawer-navigation"
+                    aria-controls="drawer-navigation"
+                  >
+                    <img
+                      src="../img/icon/햄버거바.png"
+                      alt="menu"
+                      class="w-6 h-5 mt-3"
+                    />
+                  </button>
+                </div>
               </div>
-              <div class="bg-yellow-300 w-20 h-8 rounded text-center p-1">
-                <button>회원가입</button>
+
+              <div id="non-login-nav" class="flex justify-end">
+                <div class="w-20 h-8 text-center p-1 ml-14">
+                  <a href="account/login.html">
+                    <button>로그인</button>
+                  </a>
+                </div>
+                <div class="bg-yellow-300 w-20 h-8 rounded text-center p-1">
+                  <a href="account/signup.html">
+                    <button>회원가입</button>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
         </nav>
-
         <nav>
           <div
+            id="searchNav-item"
             class="max-w-screen-xl flex flex-wrap items-center justify-around mx-auto p-3 pb-0"
           >
-            <div>
-              <a href="https://page.ppiyong.shop/main.html">홈</a>
+            <button id="home-href">
+              <a href="main.html">홈</a>
               <div class="bg-mySky p-1 h-3"></div>
-            </div>
-            <div>
-              <a href="https://page.ppiyong.shop/map.html">주변 대피소</a>
+            </button>
+            <button id="shelter-href">
+              <a href="map.html">주변 대피소</a>
               <div class="bg-mySky p-1 h-3"></div>
-            </div>
-            <div>
-              <a href="https://page.ppiyong.shop/checklist.html">체크리스트</a>
-              <div class="bg-mySky p-1 h-3"></div>
-            </div>
+            </button>
+            <button id="checklist-href" class="font-bold">
+              <a href="checklist.html">체크리스트</a>
+              <div
+                class="under-nav bg-mySky p-1 h-3 border-b-4 border-yellow-300 border-7"
+              ></div>
+            </button>
           </div>
+
+          <div class="searchMain_nav_underline"></div>
         </nav>
+      </div>
+      <!-- drawer component -->
+      <div
+        id="drawer-navigation"
+        class="fixed top-0 left-0 z-40 w-64 h-screen p-4 overflow-y-auto transition-transform -translate-x-full bg-white dark:bg-gray-800"
+        tabindex="-1"
+        aria-labelledby="drawer-navigation-label"
+      >
+        <button
+          type="button"
+          data-drawer-hide="drawer-navigation"
+          aria-controls="drawer-navigation"
+          class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 absolute top-2.5 right-2.5 inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white"
+        >
+          <svg
+            aria-hidden="true"
+            class="w-5 h-5"
+            fill="currentColor"
+            viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+              clip-rule="evenodd"
+            ></path>
+          </svg>
+          <span class="sr-only">Close menu</span>
+        </button>
+        <div class="py-4 overflow-y-auto">
+          <ul class="space-y-2">
+            <li>
+              <a
+                class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white"
+              >
+                <svg
+                  class="w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="currentColor"
+                  viewBox="0 0 22 21"
+                ></svg>
+                <span class="username-text mt-10 font-bold text-2xl"
+                  >강윤진</span
+                >
+                <span class="mt-10 font-medium text-2xl">님</span>
+              </a>
+            </li>
+            <li>
+              <a
+                href="myChecklist.html"
+                class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
+              >
+                <svg
+                  class="flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="currentColor"
+                  viewBox="0 0 18 18"
+                ></svg>
+                <span class="flex-1 ml-3 whitespace-nowrap">MY 체크리스트</span>
+              </a>
+            </li>
+            <li>
+              <a
+                href="/account/select_region.html"
+                class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
+              >
+                <svg
+                  class="flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="currentColor"
+                  viewBox="0 0 20 20"
+                ></svg>
+                <span class="flex-1 ml-3 whitespace-nowrap"
+                  >다른 지역 확인하기</span
+                >
+              </a>
+            </li>
+            <li>
+              <a
+                href="account/editMember.html"
+                class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
+              >
+                <svg
+                  class="flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="currentColor"
+                  viewBox="0 0 20 18"
+                ></svg>
+                <span class="flex-1 ml-3 whitespace-nowrap"
+                  >회원정보 수정하기</span
+                >
+              </a>
+            </li>
+            <li>
+              <a
+                href="#"
+                class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
+              >
+                <svg
+                  class="flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="currentColor"
+                  viewBox="0 0 18 20"
+                ></svg>
+                <span class="flex-1 ml-3 whitespace-nowrap">로그아웃</span>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
 
       <div class="cehcklist-content p-5">
         <div class="content-title flex justify-between">
           <div>
             <p class="text-2xl">
-              <span class="font-bold">태풍/강풍</span> <br />
+              <span class="font-bold">폭염</span> <br />
               체크리스트
             </p>
           </div>
         </div>
 
         <div class="main-article pt-4">
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum has been the industry's standard dummy text ever
-          since the 1500s, when an unknown printer took a galley of type and
-          scrambled it to make a type specimen book. It has survived not only
-          five centuries, but also the leap into electronic typesetting,
-          remaining essentially unchanged. It was popularised in the 1960s with
-          the release of Letraset sheets containing Lorem Ipsum passages, and
-          more recently with desktop publishing software like Aldus PageMaker
-          including versions of Lorem Ipsum.
+              1. 무더위에는 카페인이 들어간 음료나 주류는 삼가고, 생수나 이온음료를 마시는 것이 좋다. <br>
+          2. 더위로 인한 질병(땀띠, 열경련, 열사병, 울열증, 화상)에 대한 증상과 대처방법을 사전에 알아둔다.<br>
+          3. 창문이 닫힌 자동차 안에는 노약자나 어린이를 홀로 남겨두지 않는다.<br>
+          4. 현기증, 메스꺼움, 두통, 근육경련 등의 증세가 보이는 경우에는 시원한 곳으로 이동하여 휴식을 취하고 시원한 음료를 천천히 마신다.<br>
+          5. 휴식시간은 장시간 한 번에 쉬기보다는 짧게 자주 갖는 것이 좋다. <br>
+          6. 냉방이 되지 않는 실내에서는 햇볕이 실내에 들어오지 않도록 하고, 환기가 잘 되도록 선풍기를 켜고 창문이나 출입문을 열어둔다. <br>
+          7. 외부에 외출 중인 경우나 자택에 냉방기가 설치되어 있지 않은 경우 가장 더운 시간에는 인근 무더위쉼터로 이동하여 더위를 피한다. 무더위쉼터는 안전디딤돌 앱, 시군구 홈페이지 등에서 확인할 수 있으며 평소에 위치를 확인해 둔다.<br>
+          8. 열사병은 심한 두통, 오한, 빈맥, 빈호흡, 저혈압을 유발하며 환자의 옷을 느슨하게 하고 환자의 몸에 시원한 물을 적셔 부채나 선풍기 등으로 몸을 식혀 대처한다.<br>
+          9. 열실신은 주로 앉아있거나 누워있는 상태에서 갑자기 일어나거나 오래 서 있을 때 발생하는데, 시원한 장소로 옮겨 다리를 머리보다 높게 올리도록 하며 의사소통이 가능할 경우엔 물을 천천히 마시게 한다.<br>
+          10. 열경련시에는 경련이 일어난 곳을 마사지해주준다. 1시간 넘게 경련이 지속되는 경우, 기저질환으로 심장질환이 있는 경우, 평상시 저염분 식이요법을 한 경우에는 바로 응급실에 방문하여 진료를 받는다.<br>
+          
         </div>
 
         <div class="youtube-div py-3">
           <iframe
             class="w-80 h-40 border-none"
-            src="https://www.youtube.com/embed/H4iIv-WY7Og"
+            src="https://www.youtube.com/embed/zzc2qmZuR1k" 
             title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
