--- a/myChecklist.html
+++ b/myChecklist.html
@@ -205,7 +205,7 @@
                   fill="currentColor"
                   viewBox="0 0 18 20"
                 ></svg>
-                <span class="flex-1 ml-3 whitespace-nowrap">로그아웃</span>
+                <span id="logout_btn" class="flex-1 ml-3 whitespace-nowrap">로그아웃</span>
               </a>
             </li>
           </ul>
